--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -13,37 +13,37 @@
   <div class="header">
     <div class="logo">
       <a href="#">
-        <img src="#" alt="#" width="42" height="#" border="#">
+        <img src="" alt="" width="42" height="">
       </a>
-      </class>
-      <!-- 1 -->
-      <div class="main_menu">
-        <ul>
-          <div class="tickets_button">
-            <li><a href="#">TICKETS</a></li>
-          </div>
-          <div class="lineup_button">
-            <li><a href="#">LINE UP</a></li>
-          </div>
-          <div class="store_button">
-            <li><a href="#">STORE</a></li>
-          </div>
-          <div class="news_button">
-            <li><a href="#">NEWS</a></li>
-          </div>
-          <div class="faqs_button">
-            <li><a href="#">FAQS</a></li>
-          </div>
-        </ul>
-        </class>
-
-        <div class="social_icons">
-          <ul>
-
-          </ul>
-
-          </class>
+    </div>
+    <!-- 1 -->
+    <div class="main_menu">
+      <ul>
+        <div class="tickets_button">
+          <li><a href="#">TICKETS</a></li>
         </div>
+        <div class="lineup_button">
+          <li><a href="#">LINE UP</a></li>
+        </div>
+        <div class="store_button">
+          <li><a href="#">STORE</a></li>
+        </div>
+        <div class="news_button">
+          <li><a href="#">NEWS</a></li>
+        </div>
+        <div class="faqs_button">
+          <li><a href="#">FAQS</a></li>
+        </div>
+      </ul>
+    </div>
+
+    <div class="social_icons">
+      <ul>
+
+      </ul>
+
+    </div>
+  </div>
         <!-- 2 -->
         <hr />
 
@@ -60,6 +60,7 @@
             <h4>"</h4>
           </div>
         </div>
+
         <div class="text">
           <p>Future Valley Festival runs over 3 days with over 120 artists
             <br />playing across 12 stages at the Royal Park in Melbourne, Australia
@@ -67,6 +68,7 @@
             <br />Future Valley showcases the brightest acts from the world.
             <br />Engage your senses and become immersed in an electrifying aural universe.</p>
         </div>
+
         <div class="quote">
           <h4>"</h4>
         </div>
@@ -96,8 +98,8 @@
                 <li><a href="#">BOOK NOW</a></li>
               </div>
             </ul>
-            </class>
           </div>
+        </div>
 <div class="note">
   <p>
     *Early bird price ends in August, when ticket costs for 3 days will change to full price.
