--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -19,9 +19,9 @@
     <!-- 1 -->
     <div class="main_menu">
       <ul>
-        <div class="tickets_button">
-          <li><a href="#">TICKETS</a></li>
-        </div>
+        <li class="tickets_button">
+          <a href="#">TICKETS</a>
+        </li>
         <div class="lineup_button">
           <li><a href="#">LINE UP</a></li>
         </div>
@@ -44,6 +44,8 @@
 
     </div>
   </div>
+
+
         <!-- 2 -->
         <hr />
 
@@ -100,11 +102,12 @@
             </ul>
           </div>
         </div>
-<div class="note">
-  <p>
-    *Early bird price ends in August, when ticket costs for 3 days will change to full price.
-  </p>
-</div>
+
+        <div class="note">
+          <p>
+            *Early bird price ends in August, when ticket costs for 3 days will change to full price.
+          </p>
+        </div>
 
           <hr />
           <!-- 3 -->
@@ -129,25 +132,24 @@
           <hr />
 
 <div class="newsletter">
-          <form action="action_page.php">
-            <div class="container">
-              <h4>SIGN UP TO OUR<br />NEWSLETTER</h4>
-            </div>
+  <form action="action_page.php">
+    <div class="container">
+      <h4>SIGN UP TO OUR NEWSLETTER</h4>
+    </div>
 
-            <div class="container" style="background-color:white">
-              <input type="text" placeholder="YOUR NAME" name="name" required>
-              <input type="text" placeholder="EMAIL ADDRESS" name="mail" required>
-            </div>
-            <div class="suscribe">
-              <input type="submit" value="Subscribe">
-            </div>
-          </form>
-
-          </div>
+    <div class="container" style="background-color:white">
+      <input type="text" placeholder="YOUR NAME" name="name" required />
+      <input type="text" placeholder="EMAIL ADDRESS" name="mail" required />
+    </div>
+    <div class="suscribe">
+      <input type="submit" value="Subscribe">
+    </div>
+  </form>
+</div>
 
           <hr />
           <!-- 4-->
-          <div class="footer">
+      <div class="footer">
         <div class="About">
           <ul>
             <div class="link">
@@ -169,69 +171,64 @@
               <li><a href="#">Privacy Policy</a></li>
             </div>
           </ul>
-          </class>
-            </div>
-
-            <div class="Socials">
-              <ul>
-                <div class="link">
-                  <li><a href="#">Facebook</a></li>
-                </div>
-                <div class="link">
-                  <li><a href="#">Tumblr</a></li>
-                </div>
-                <div class="link">
-                  <li><a href="#">Twitter</a></li>
-                </div>
-                <div class="link">
-                  <li><a href="#">Instagram</a></li>
-                </div>
-                <div class="link">
-                  <li><a href="#">YouTube</a></li>
-                </div>
-                <div class="link">
-                  <li><a href="#">Spotify</a></li>
-                </div>
-              </ul>
-              </class>
-            </div>
-
-            <div class="footer_img">
-              <img border="0" alt="#" src="#" width="100" height="100">
-              <p> Copyright 2018 Electric Eel Pty Ltd.
-              </p>
-            </div>
-
-            <div class="menu2">
-              <ul>
-                <div class="2_ticket">
-                  <li><a href="#">Tickets</a></li>
-                </div>
-                <div class="2_artist">
-                  <li><a href="#">Artists</a></li>
-                </div>
-                <div class="2_store">
-                  <li><a href="#">Store</a></li>
-                </div>
-                <div class="2_accomodation">
-                  <li><a href="#">Accomodation</a></li>
-                </div>
-                <div class="2_location">
-                  <li><a href="#">Location</a></li>
-                </div>
-                <div class="2_transport">
-                  <li><a href="#">Transport</a></li>
-                </div>
-                <div class="2_news">
-                  <li><a href="#">News</a></li>
-                </div>
-              </ul>
-              </class>
         </div>
 
+        <div class="Socials">
+          <ul>
+            <div class="link">
+              <li><a href="#">Facebook</a></li>
+            </div>
+            <div class="link">
+              <li><a href="#">Tumblr</a></li>
+            </div>
+            <div class="link">
+              <li><a href="#">Twitter</a></li>
+            </div>
+            <div class="link">
+              <li><a href="#">Instagram</a></li>
+            </div>
+            <div class="link">
+              <li><a href="#">YouTube</a></li>
+            </div>
+            <div class="link">
+              <li><a href="#">Spotify</a></li>
+            </div>
+          </ul>
+        </div>
 
+        <div class="footer_img">
+          <img border="0" alt="#" src="#" width="100" height="100">
+          <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
+          </p>
+        </div>
 
-          </div>
+        <div class="menu2">
+          <ul>
+            <div class="2_ticket">
+              <li><a href="#">Tickets</a></li>
+            </div>
+            <div class="2_artist">
+              <li><a href="#">Artists</a></li>
+            </div>
+            <div class="2_store">
+              <li><a href="#">Store</a></li>
+            </div>
+            <div class="2_accomodation">
+              <li><a href="#">Accomodation</a></li>
+            </div>
+            <div class="2_location">
+              <li><a href="#">Location</a></li>
+            </div>
+            <div class="2_transport">
+              <li><a href="#">Transport</a></li>
+            </div>
+            <div class="2_news">
+              <li><a href="#">News</a></li>
+            </div>
+          </ul>
+        </div>
+      </div>
+
 </body>
 
 </html>
