created CSS sheet and edited: unordered list, deleted unnecessary divs

--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<title>ELECTRIC EEL FESTIVAL</title>
 <html>
 
 <head>
@@ -12,222 +12,189 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="#">
-        <img src="" alt="" width="42" height="">
-      </a>
     </div>
     <!-- 1 -->
     <div class="main_menu">
-      <ul>
+      <ul class="menu_buttons">
+        <li class="logo_image">
+          <a href="#">
+            <img src="" alt="logo" width="42" height="" />
+          </a>
+        </li>
         <li class="tickets_button">
           <a href="#">TICKETS</a>
         </li>
-        <div class="lineup_button">
-          <li><a href="#">LINE UP</a></li>
-        </div>
-        <div class="store_button">
-          <li><a href="#">STORE</a></li>
-        </div>
-        <div class="news_button">
-          <li><a href="#">NEWS</a></li>
-        </div>
-        <div class="faqs_button">
-          <li><a href="#">FAQS</a></li>
-        </div>
-      </ul>
+        <li class="lineup_button"><a href="#">LINE UP</a>
+        </li>
+        <li class="store_button"><a href="#">STORE</a>
+        </li>
+        <li class="news_button"><a href="#">NEWS</a>
+        </li>
+        <li class="faqs_button"><a href="#">FAQS</a>
+        </li>
+        <li class="login_in_link"><a href="#">Login In / Register</a>
+        </li>
     </div>
+    </ul>
+  </div>
 
-    <div class="social_icons">
-      <ul>
+  <div class="social_icons">
+    <ul>
 
-      </ul>
+    </ul>
 
-    </div>
+  </div>
   </div>
 
 
-        <!-- 2 -->
-        <hr />
+  <!-- 2 -->
+  <hr />
 
-        <img src="#" alt="#" width="#" height="#">
+  <img src="image_gallery" alt="#" width="#" height="#" />
 
-        <hr />
+  <hr />
 
-        <div class="main">
-          <h1>ELECTRIC EEL</h1>
-          <h2>MUSIC FESTIVAL</h2>
-          <h3>MARCH 2019</h3>
+  <div class="main">
+    <h1>ELECTRIC EEL</h1>
+    <h2>MUSIC FESTIVAL</h2>
+    <h3>MARCH 2019</h3>
 
-          <div class="quote">
-            <h4>"</h4>
-          </div>
-        </div>
-
-        <div class="text">
-          <p>Future Valley Festival runs over 3 days with over 120 artists
-            <br />playing across 12 stages at the Royal Park in Melbourne, Australia
-            <br />With cutting-edge live shows and both international superstars of tomorrow,
-            <br />Future Valley showcases the brightest acts from the world.
-            <br />Engage your senses and become immersed in an electrifying aural universe.</p>
-        </div>
-
-        <div class="quote">
-          <h4>"</h4>
-        </div>
-
-        <div class="prices_txt">
-          <p>
-            Early bird tickets are on sale now for a limited time only
-          </p>
-          <div class="prices_list">
-            <ul>
-              <div class="early_bird">
-                <p>
-                  Early bird* price: <br />$205 <br />(3 days)
-                </p>
-                <li><a href="#">BOOK NOW</a></li>
-              </div>
-              <p>
-                Full price: <br />$340 <br />(3 days)
-              </p>
-              <div class="full_price">
-                <li><a href="#">BOOK NOW</a></li>
-              </div>
-              <div class="single_day">
-                <p>
-                  Single day: <br />$110
-                </p>
-                <li><a href="#">BOOK NOW</a></li>
-              </div>
-            </ul>
-          </div>
-        </div>
-
-        <div class="note">
-          <p>
-            *Early bird price ends in August, when ticket costs for 3 days will change to full price.
-          </p>
-        </div>
-
-          <hr />
-          <!-- 3 -->
-          <div class="images">
-            1 <a href="#">
-              <img border="0" alt="#" src="#" width="100" height="100">
-            </a>
-            2 <a href="#">
-              <img border="0" alt="#" src="#" width="100" height="100">
-            </a>
-            3 <a href="#">
-              <img border="0" alt="#" src="#" width="100" height="100">
-            </a>
-            4 <a href="#">
-              <img border="0" alt="#" src="#" width="100" height="100">
-            </a>
-            5 <a href="#">
-              <img border="0" alt="#" src="#" width="100" height="100">
-            </a>
-          </div>
-
-          <hr />
-
-<div class="newsletter">
-  <form action="action_page.php">
-    <div class="container">
-      <h4>SIGN UP TO OUR NEWSLETTER</h4>
+    <div class="quote">
+      <h4>"</h4>
     </div>
+  </div>
 
-    <div class="container" style="background-color:white">
-      <input type="text" placeholder="YOUR NAME" name="name" required />
-      <input type="text" placeholder="EMAIL ADDRESS" name="mail" required />
+  <div class="text">
+
+    <blockquote>
+      <p>Future Valley Festival runs over 3 days with over 120 artists
+      <br />playing across 12 stages at the Royal Park in Melbourne, Australia
+      <br />With cutting-edge live shows and both international superstars of tomorrow,
+      <br />Future Valley showcases the brightest acts from the world.
+      <br />Engage your senses and become immersed in an electrifying aural universe.</p>
+        </blockquote
+
+  </div>
+
+  <div class="quote">
+    <h4>"</h4>
+  </div>
+
+  <div class="prices_txt">
+    <p>
+      Early bird tickets are on sale now for a limited time only
+    </p>
+    <div class="prices_list">
+      <ul class="prices">
+        <p>
+          Early bird* price: <br />$205 <br />(3 days)
+        </p>
+        <li class="early_bird"><a href="#">BOOK NOW</a>
+        </li>
+        <p>
+          Full price: <br />$340 <br />(3 days)
+        </p>
+        <li class="full_price"><a href="#">BOOK NOW</a>
+        </li>
+        <p>
+          Single day: <br />$110
+        </p>
+        <li class="single_day"><a href="#">BOOK NOW</a>
+        </li>
     </div>
-    <div class="suscribe">
-      <input type="submit" value="Subscribe">
+    </ul>
+    <div class="note">
+      <p>
+        *Early bird price ends in August, when ticket costs for 3 days will change to full price.
+      </p>
     </div>
-  </form>
-</div>
+  </div>
 
-          <hr />
-          <!-- 4-->
-      <div class="footer">
-        <div class="About">
-          <ul>
-            <div class="link">
-              <li><a href="#">About Us</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Contact</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Legal</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">T&C</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">FAQS</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Privacy Policy</a></li>
-            </div>
-          </ul>
-        </div>
+  <hr />
+  <!-- 3 -->
+  <div class="images">
+    <a href="#">
+      <img alt="Artists" src="#" width="100" height="100" />
+    </a>
+    <a href="#">
+      <img alt="Accomodation" src="#" width="100" height="100" />
+    </a>
+    <a href="#">
+      <img alt="Location" src="#" width="100" height="100" />
+    </a>
+    <a href="#">
+      <img alt="Transport" src="#" width="100" height="100" />
+    </a>
+    <a href="#">
+      <img alt="Experiences" src="#" width="100" height="100" />
+    </a>
+  </div>
 
-        <div class="Socials">
-          <ul>
-            <div class="link">
-              <li><a href="#">Facebook</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Tumblr</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Twitter</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Instagram</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">YouTube</a></li>
-            </div>
-            <div class="link">
-              <li><a href="#">Spotify</a></li>
-            </div>
-          </ul>
-        </div>
+  <hr />
 
-        <div class="footer_img">
-          <img border="0" alt="#" src="#" width="100" height="100">
-          <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
-          </p>
-        </div>
-
-        <div class="menu2">
-          <ul>
-            <div class="2_ticket">
-              <li><a href="#">Tickets</a></li>
-            </div>
-            <div class="2_artist">
-              <li><a href="#">Artists</a></li>
-            </div>
-            <div class="2_store">
-              <li><a href="#">Store</a></li>
-            </div>
-            <div class="2_accomodation">
-              <li><a href="#">Accomodation</a></li>
-            </div>
-            <div class="2_location">
-              <li><a href="#">Location</a></li>
-            </div>
-            <div class="2_transport">
-              <li><a href="#">Transport</a></li>
-            </div>
-            <div class="2_news">
-              <li><a href="#">News</a></li>
-            </div>
-          </ul>
-        </div>
+  <div class="newsletter">
+    <form action="action_page.php">
+      <div class="container">
+        <h4>SIGN UP TO OUR NEWSLETTER</h4>
       </div>
+
+      <div class="container" style="background-color:white">
+        <input type="text" placeholder="Your Name" name="name" required />
+        <input type="text" placeholder="Email Address" name="mail" required />
+      </div>
+      <div class="suscribe">
+        <input type="submit" value="Subscribe">
+      </div>
+    </form>
+  </div>
+
+  <hr />
+  <!-- 4-->
+  <div class="footer">
+    <div class="About">
+      <ul>
+        <li class="link"><a href="#">About Us</a></li>
+        <li class="link"><a href="#">Contact</a></li>
+        <li class="link"><a href="#">Legal</a></li>
+        <li class="link"><a href="#">T&C</a></li>
+        <li class="link"><a href="#">FAQS</a></li>
+        <li class="link"><a href="#">Privacy Policy</a></li>
+      </ul>
+    </div>
+
+    <div class="Socials">
+      <ul>
+        <li class="link"><a href="#">Facebook</a></li>
+        <li class="link"><a href="#">Tumblr</a></li>
+        <li class="link"><a href="#">Twitter</a></li>
+        <li class="link"><a href="#">Instagram</a></li>
+        <li class="link"><a href="#">YouTube</a></li>
+        <li class="link"><a href="#">Spotify</a></li>
+      </ul>
+    </div>
+
+    <div class="footer_img">
+      <img alt="#" src="#" width="100" height="100" />
+      <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
+      </p>
+    </div>
+
+    <div class="menu2">
+      <ul>
+        <li class="link"><a href="#">Tickets</a></li>
+        <li class="link"><a href="#">Artists</a></li>
+        <li class="link"><a href="#">Store</a></li>
+        <li class="link"><a href="#">Accomodation</a></li>
+        <li class="link"><a href="#">Location</a></li>
+        <li class="link"><a href="#">Transport</a></li>
+        <li class="link"><a href="#">News</a></li>
+      </ul>
+    </div>
+
+    <div class="search_button">
+      <input type="text" placeholder="Search...">
+    </div>
+  </div>
 
 </body>
 
