changed paragraph quote, put paragraphs inside LI, deleted unneccessary divs and replaced with ULs, continued with CSS

--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -5,7 +5,10 @@
 <head>
   <!-- pre-load - all of the content before the page has actually loaded -->
 
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Orbitron" rel="stylesheet">
+
   <link href="main.css" rel="stylesheet">
+
 
 </head>
 
@@ -14,6 +17,8 @@
     <div class="logo">
     </div>
     <!-- 1 -->
+
+
     <div class="main_menu">
       <ul class="menu_buttons">
         <li class="logo_image">
@@ -44,7 +49,6 @@
     </ul>
 
   </div>
-  </div>
 
 
   <!-- 2 -->
@@ -58,51 +62,61 @@
     <h1>ELECTRIC EEL</h1>
     <h2>MUSIC FESTIVAL</h2>
     <h3>MARCH 2019</h3>
-
-    <div class="quote">
-      <h4>"</h4>
-    </div>
   </div>
 
+
+
   <div class="text">
+    <h4>"</h4>
 
     <blockquote>
       <p>Future Valley Festival runs over 3 days with over 120 artists
-      <br />playing across 12 stages at the Royal Park in Melbourne, Australia
-      <br />With cutting-edge live shows and both international superstars of tomorrow,
-      <br />Future Valley showcases the brightest acts from the world.
-      <br />Engage your senses and become immersed in an electrifying aural universe.</p>
-        </blockquote
+        playing across 12 stages at the Royal Park in Melbourne, Australia.
+        <br />With cutting-edge live shows and both international superstars
+        of tomorrow, Future Valley showcases the brightest acts from the world.
+        <br />Engage your senses and become immersed in an electrifying aural
+        universe.</p>
+    </blockquote>
+
+    <h5>"</h5>
 
   </div>
 
-  <div class="quote">
-    <h4>"</h4>
-  </div>
 
   <div class="prices_txt">
     <p>
       Early bird tickets are on sale now for a limited time only
     </p>
+
+
     <div class="prices_list">
+
       <ul class="prices">
-        <p>
-          Early bird* price: <br />$205 <br />(3 days)
-        </p>
-        <li class="early_bird"><a href="#">BOOK NOW</a>
+
+        <li class="early_bird">
+          <p>
+          Early bird* price:
+          <br />$205 <br />(3 days)
+        </p><a href="#">BOOK NOW</a>
+
         </li>
-        <p>
-          Full price: <br />$340 <br />(3 days)
-        </p>
-        <li class="full_price"><a href="#">BOOK NOW</a>
+
+        <li class="full_price">
+          <p>
+            Full price: <br />$340 <br />(3 days)
+          </p>
+          <a href="#">BOOK NOW</a>
         </li>
-        <p>
-          Single day: <br />$110
-        </p>
-        <li class="single_day"><a href="#">BOOK NOW</a>
-        </li>
+
+            <li class="single_day">
+              <p>
+                Single day: <br />$110 </br>(1 day)
+              </p>
+              <a href="#">BOOK NOW</a>
+            </li>
     </div>
-    </ul>
+
+
     <div class="note">
       <p>
         *Early bird price ends in August, when ticket costs for 3 days will change to full price.
@@ -138,11 +152,11 @@
         <h4>SIGN UP TO OUR NEWSLETTER</h4>
       </div>
 
-      <div class="container" style="background-color:white">
+      <div class="container" style="background-color:black">
         <input type="text" placeholder="Your Name" name="name" required />
         <input type="text" placeholder="Email Address" name="mail" required />
       </div>
-      <div class="suscribe">
+      <div class="subscribe">
         <input type="submit" value="Subscribe">
       </div>
     </form>
@@ -151,8 +165,7 @@
   <hr />
   <!-- 4-->
   <div class="footer">
-    <div class="About">
-      <ul>
+      <ul class="about">
         <li class="link"><a href="#">About Us</a></li>
         <li class="link"><a href="#">Contact</a></li>
         <li class="link"><a href="#">Legal</a></li>
@@ -160,10 +173,8 @@
         <li class="link"><a href="#">FAQS</a></li>
         <li class="link"><a href="#">Privacy Policy</a></li>
       </ul>
-    </div>
 
-    <div class="Socials">
-      <ul>
+      <ul class="socials">
         <li class="link"><a href="#">Facebook</a></li>
         <li class="link"><a href="#">Tumblr</a></li>
         <li class="link"><a href="#">Twitter</a></li>
@@ -171,16 +182,16 @@
         <li class="link"><a href="#">YouTube</a></li>
         <li class="link"><a href="#">Spotify</a></li>
       </ul>
-    </div>
 
-    <div class="footer_img">
-      <img alt="#" src="#" width="100" height="100" />
+    <ul class="footer_img">
+      <li class=link>
+        <img alt="logo_image" src="#" width="100" height="100" />
       <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
       </p>
-    </div>
-
-    <div class="menu2">
-      <ul>
+      </li>
+    </ul>
+>
+      <ul class="menu2">
         <li class="link"><a href="#">Tickets</a></li>
         <li class="link"><a href="#">Artists</a></li>
         <li class="link"><a href="#">Store</a></li>
@@ -189,11 +200,11 @@
         <li class="link"><a href="#">Transport</a></li>
         <li class="link"><a href="#">News</a></li>
       </ul>
-    </div>
 
-    <div class="search_button">
+    <ul class="search_button">
       <input type="text" placeholder="Search...">
-    </div>
+    </ul>
+
   </div>
 
 </body>
