added font, added social icons from link, changed ALT names,

--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -5,10 +5,10 @@
 <head>
   <!-- pre-load - all of the content before the page has actually loaded -->
 
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Orbitron" rel="stylesheet">
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Inconsolata|Orbitron" rel="stylesheet">
 
 </head>
 
@@ -41,20 +41,26 @@
         </li>
     </div>
     </ul>
+    <div class="social_icons">
+      <ul>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-tumblr"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-spotify"></i>
+      </ul>
+
+    </div>
   </div>
 
-  <div class="social_icons">
-    <ul>
 
-    </ul>
-
-  </div>
 
 
   <!-- 2 -->
   <hr />
 
-  <img src="image_gallery" alt="#" width="#" height="#" />
+  <img src="image_gallery" alt="main_image" width="#" height="#" />
 
   <hr />
 
