added images to file, created DIVS for images, added extra font in CSS: changed word spacing, font sizes, made in-line blocks, made images float and align,

--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -5,50 +5,53 @@
 <head>
   <!-- pre-load - all of the content before the page has actually loaded -->
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Inconsolata|Orbitron" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Orbitron" rel="stylesheet">
 
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
+      <a href="#">
+        <img src="IMAGES/eel.png" alt="logo" width="184" height="" />
+      </a>
     </div>
     <!-- 1 -->
 
 
     <div class="main_menu">
       <ul class="menu_buttons">
-        <li class="logo_image">
-          <a href="#">
-            <img src="" alt="logo" width="42" height="" />
-          </a>
-        </li>
         <li class="tickets_button">
-          <a href="#">TICKETS</a>
+          <a href="#">
+            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
         </li>
-        <li class="lineup_button"><a href="#">LINE UP</a>
+        <li class="lineup_button"><a href="#">
+            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
         </li>
-        <li class="store_button"><a href="#">STORE</a>
+        <li class="store_button"><a href="#">
+            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
         </li>
-        <li class="news_button"><a href="#">NEWS</a>
+        <li class="news_button"><a href="#">
+            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
         </li>
-        <li class="faqs_button"><a href="#">FAQS</a>
-        </li>
-        <li class="login_in_link"><a href="#">Login In / Register</a>
-        </li>
+        <li class="faqs_button"><a href="#">
+            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+
+      </ul>
     </div>
-    </ul>
     <div class="social_icons">
-      <ul>
+      <ul class="social_icons">
         <i class="fab fa-facebook-f"></i>
         <i class="fab fa-tumblr"></i>
         <i class="fab fa-instagram"></i>
         <i class="fab fa-twitter"></i>
         <i class="fab fa-youtube"></i>
         <i class="fab fa-spotify"></i>
+        </br>
+        <a class="login_in" href="#">Login In / Register</a>
       </ul>
 
     </div>
@@ -60,40 +63,43 @@
   <!-- 2 -->
   <hr />
 
-  <img src="image_gallery" alt="main_image" width="#" height="#" />
+  <img src="IMAGES/main_image.jpg" alt="main_image" />
 
   <hr />
 
   <div class="main">
     <h1>ELECTRIC EEL</h1>
     <h2>MUSIC FESTIVAL</h2>
-    <h3>MARCH 2019</h3>
+    <h3>DECEMBER 2019</h3>
   </div>
 
 
 
   <div class="text">
-    <h4>"</h4>
-
+<div class="quote">
+    <h4>&ldquo;</h4>
+    </div>
+<div class="block_quote">
     <blockquote>
       <p>Future Valley Festival runs over 3 days with over 120 artists
+        <br/>
         playing across 12 stages at the Royal Park in Melbourne, Australia.
         <br />With cutting-edge live shows and both international superstars
-        of tomorrow, Future Valley showcases the brightest acts from the world.
+        of tomorrow,
+        <br />Future Valley showcases the brightest acts from the world.
         <br />Engage your senses and become immersed in an electrifying aural
         universe.</p>
     </blockquote>
+    </div>
 
-    <h5>"</h5>
+    <div class="quote">
+    <h5>&rdquo;</h5>
+    </div>
 
   </div>
 
 
   <div class="prices_txt">
-    <p>
-      Early bird tickets are on sale now for a limited time only
-    </p>
-
 
     <div class="prices_list">
 
@@ -101,9 +107,9 @@
 
         <li class="early_bird">
           <p>
-          Early bird* price:
-          <br />$205 <br />(3 days)
-        </p><a href="#">BOOK NOW</a>
+            Early bird&#42;	 price:
+            <br />$205 <br />(3 days)
+          </p><a href="#">BOOK NOW</a>
 
         </li>
 
@@ -114,18 +120,24 @@
           <a href="#">BOOK NOW</a>
         </li>
 
-            <li class="single_day">
-              <p>
-                Single day: <br />$110 </br>(1 day)
-              </p>
-              <a href="#">BOOK NOW</a>
-            </li>
+        <li class="single_day">
+          <p>
+            Single day: <br />$110 </br> (1 day)
+          </p>
+          <a href="#">BOOK NOW</a>
+        </li>
+
     </div>
+
+
 
 
     <div class="note">
       <p>
-        *Early bird price ends in August, when ticket costs for 3 days will change to full price.
+        &#42;	&#42;	 Early bird tickets are on sale now for a limited time only &#42;	&#42;
+      </p>
+      <p>
+        &#42;	Early bird price ends in August, when ticket costs for 3 days will change to full price.
       </p>
     </div>
   </div>
@@ -133,21 +145,37 @@
   <hr />
   <!-- 3 -->
   <div class="images">
-    <a href="#">
-      <img alt="Artists" src="#" width="100" height="100" />
-    </a>
-    <a href="#">
-      <img alt="Accomodation" src="#" width="100" height="100" />
-    </a>
-    <a href="#">
-      <img alt="Location" src="#" width="100" height="100" />
-    </a>
-    <a href="#">
-      <img alt="Transport" src="#" width="100" height="100" />
-    </a>
-    <a href="#">
-      <img alt="Experiences" src="#" width="100" height="100" />
-    </a>
+    <div class="solo_artist">
+      <div class="artists">
+        <a href="#">
+          <img src="IMAGES/artists.png" alt="artists" />
+        </a>
+      </div>
+    </div>
+    <div class="four_boxes">
+      <div class="accomodation">
+        <a href="#">
+          <img src="IMAGES/Accomodation.png" alt="Accomodation" />
+        </a>
+      </div>
+      <div class="location">
+
+        <a href="#">
+          <img src="IMAGES/location.png" alt="location" />
+        </a>
+      </div>
+      <div class="transport">
+        <a href="#">
+          <img src="IMAGES/transport.png" alt="transport" />
+        </a>
+      </div>
+      <div class="experiences">
+
+        <a href="#">
+          <img src="IMAGES/experiences.png" alt="experiences" />
+        </a>
+      </div>
+    </div>
   </div>
 
   <hr />
@@ -155,7 +183,7 @@
   <div class="newsletter">
     <form action="action_page.php">
       <div class="container">
-        <h4>SIGN UP TO OUR NEWSLETTER</h4>
+        <h6>SIGN UP TO OUR NEWSLETTER</h6>
       </div>
 
       <div class="container" style="background-color:black">
@@ -171,6 +199,8 @@
   <hr />
   <!-- 4-->
   <div class="footer">
+    <div class="about">
+
       <ul class="about">
         <li class="link"><a href="#">About Us</a></li>
         <li class="link"><a href="#">Contact</a></li>
@@ -179,6 +209,9 @@
         <li class="link"><a href="#">FAQS</a></li>
         <li class="link"><a href="#">Privacy Policy</a></li>
       </ul>
+    </div>
+
+    <div class="socials">
 
       <ul class="socials">
         <li class="link"><a href="#">Facebook</a></li>
@@ -189,14 +222,21 @@
         <li class="link"><a href="#">Spotify</a></li>
       </ul>
 
-    <ul class="footer_img">
-      <li class=link>
-        <img alt="logo_image" src="#" width="100" height="100" />
-      <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
-      </p>
-      </li>
-    </ul>
->
+    </div>
+
+    <div class="image_copyright">
+
+      <ul class="footer_img">
+        <li class=link>
+          <img src="IMAGES/eel.png" alt="logo" width="184" height="" />
+          <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
+          </p>
+        </li>
+      </ul>
+
+    </div>
+
+    <div class="menu2">
       <ul class="menu2">
         <li class="link"><a href="#">Tickets</a></li>
         <li class="link"><a href="#">Artists</a></li>
@@ -207,9 +247,13 @@
         <li class="link"><a href="#">News</a></li>
       </ul>
 
-    <ul class="search_button">
-      <input type="text" placeholder="Search...">
-    </ul>
+    </div>
+
+    <div class="search_button">
+        <input type="text" placeholder="Search...">
+
+
+    </div>
 
   </div>
 
