--- a/1.Learning_html.html
+++ b/1.Learning_html.html
@@ -26,19 +26,19 @@
       <ul class="menu_buttons">
         <li class="tickets_button">
           <a href="#">
-            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+            <img src="IMAGES/tickers.png" alt="logo" width="184" height="" /></a>
         </li>
         <li class="lineup_button"><a href="#">
-            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+            <img src="IMAGES/line up.png" alt="logo" width="184" height="80" /></a>
         </li>
         <li class="store_button"><a href="#">
-            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+            <img src="IMAGES/store.png" alt="logo" width="184" height="" /></a>
         </li>
         <li class="news_button"><a href="#">
-            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+            <img src="IMAGES/news.png" alt="logo" width="184" height="" /></a>
         </li>
         <li class="faqs_button"><a href="#">
-            <img src="IMAGES/eel.png" alt="logo" width="184" height="" /></a>
+            <img src="IMAGES/faqs.png" alt="logo" width="184" height="" /></a>
 
       </ul>
     </div>
@@ -228,7 +228,7 @@
 
       <ul class="footer_img">
         <li class=link>
-          <img src="IMAGES/eel.png" alt="logo" width="184" height="" />
+          <img src="IMAGES/eel.png" alt="logo" width="300px" height="" />
           <p>&copy; Copyright 2018 Electric Eel Pty Ltd.
           </p>
         </li>
